SystemProperty method renamed